[gd_scene load_steps=14 format=2]

[ext_resource path="res://entities/AsteroidSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://assets/images/backgrounds/darkPurple.png" type="Texture" id=4]
[ext_resource path="res://entities/MainCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/UbuntuMono-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/Score.gd" type="Script" id=7]
[ext_resource path="res://assets/audio/music/sawsquarenoise_-_03_-_Towel_Defence_Ingame.ogg" type="AudioStream" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(0.0, -1.0);
uniform float speed_scale = 0.5;

void fragment() {
	
	vec2 move= direction * TIME * speed_scale;
	
	COLOR = texture(TEXTURE, UV+move);
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/direction = Vector2( 0, -1 )
shader_param/speed_scale = 0.5

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -10, -10 )
region_enabled = true
region_rect = Rect2( 0, 0, 1300, 740 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 626, 680 )

[node name="AsteroidSpawner" parent="." instance=ExtResource( 1 )]

[node name="MainCamera" parent="." instance=ExtResource( 5 )]
anchor_mode = 0
current = true

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
margin_right = 1280.0
margin_bottom = 60.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1260.0
margin_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
margin_right = 1240.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Score" type="Label" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
script = ExtResource( 7 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 188.901
margin_top = 155.565
margin_right = 1088.9
margin_bottom = 355.565
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="GameOverLabel"]
visible = false
margin_left = 242.872
margin_top = 490.507
margin_right = 662.872
margin_bottom = 533.507
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Press 'r' to Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
